# ranklab-api

./: .dockerignore  .ebignore  .gitignore  Cargo.toml  Dockerfile  Dockerrun.aws.json  README.md  Ranklab.toml  Rocket.toml  diesel.toml  renovate.json  rust-toolchain  schema.patch  task-definition.json
.cargo/: config.toml
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml  setup  setup.sh
.devcontainer/initdb/: create-test-db.sh
.github/workflows/: ci.yml  deploy.yml  test.yml
migrations/2021-07-14-091315_create_players/: up.sql
migrations/2021-07-14-091315_create_users/: up.sql
migrations/2021-07-20-105133_create_recordings/: up.sql
migrations/2021-07-21-161035_create_games/: up.sql
migrations/2021-07-22-161036_create_coaches/: down.sql  up.sql
migrations/2021-07-22-161040_create_reviews/: down.sql  up.sql
migrations/2021-07-23-165156_create_comments/: up.sql
migrations/2021-10-07-083143_seed_games/: down.sql  up.sql
migrations/2022-02-17-085917_create_review_intents/: down.sql  up.sql
migrations/2022-11-02-082626_create_one_time_tokens/: down.sql  up.sql
migrations/2023-01-24-090314_create_coach_invitations/: down.sql  up.sql
migrations/2023-03-22-191537_add_email_preferences/: down.sql  up.sql
migrations/2023-04-04-175257_add_slug_to_coaches/: down.sql  up.sql
migrations/2023-04-06-083706_add_invitation_tokens_default_value/: down.sql  up.sql
migrations/2023-04-08-092258_create_recording_state_enum/: down.sql  up.sql
migrations/2023-04-12-044544_add_metadata_to_comments_and_recordings/: down.sql  up.sql
migrations/2023-04-12-150650_drop_mime_type/: down.sql  up.sql
migrations/2023-04-17-041411_remove_comment_video_timestamp/: down.sql  up.sql
migrations/2023-04-17-082027_remove_comment_drawing/: down.sql  up.sql
migrations/2023-04-18-082425_add_coaches_game_id_index/: down.sql  up.sql
migrations/2023-04-30-092602_create_avatars/: down.sql  up.sql
migrations/2023-05-01-065947_add_coach_id_to_avatars/: down.sql  up.sql
migrations/2023-05-19-135827_add_approved_to_coaches/: down.sql  up.sql
migrations/2023-05-20-143539_reset_avatar_id_default/: up.sql
migrations/2023-05-25-085101_create_audios/: down.sql  up.sql
migrations/2023-06-01-093738_make_passwords_optional/: down.sql  up.sql
migrations/2023-06-01-115450_add_transcript_to_audios/: down.sql  up.sql
migrations/2023-06-04-110551_add_reviews_count_to_coaches/: down.sql  up.sql
migrations/2023-06-13-143057_add_avatars_to_players/: down.sql  up.sql
migrations/2023-06-14-152213_free_tier/: down.sql  up.sql
migrations/2023-07-31-080422_add_skill_level_player/: down.sql  up.sql
migrations/2023-08-07-074853_add_notified_at_to_comments/: down.sql  up.sql
migrations/2023-08-15-073828_add_digest_notified_at_to_users/: down.sql  up.sql
migrations/2023-10-13-082900_remove_unnecessary_models/: down.sql  up.sql
migrations/2023-10-23-144358_add_followings_table/: up.sql
migrations/2023-10-25-081121_add_digests_table/: down.sql  up.sql
migrations/2023-11-15-154317_add_cascading_delete_for_comments/: down.sql  up.sql
migrations/2023-11-19-152957_remove_avatar_id_from_users/: down.sql  up.sql
src/: auth.rs  aws.rs  clients.rs  config.rs  data_types.rs  db.rs  emails.rs  fairings.rs  games.rs  guards.rs  intercom.rs  lib.rs  main.rs  models.rs  oidc.rs  pagination.rs  queue_handlers.rs  response.rs  routes.rs  schema.rs  schema.rs.orig  stripe.rs  views.rs
src/aws/: media_convert.rs
src/clients/: auth0_management.rs  stripe.rs
src/clients/auth0_management/: error.rs  token.rs
src/data_types/: avatar_state.rs  media_state.rs  player_game.rs  recording_state.rs  review_state.rs  skill_level.rs
src/emails/: notifications.rs
src/fairings/: cron.rs  sentry.rs  sqs.rs
src/fairings/sqs/: s3_bucket.rs  stripe.rs
src/games/: apex.rs  chess.rs  cs2.rs  csgo.rs  dota2.rs  gym.rs  hearthstone.rs  lol.rs  overwatch.rs  r6s.rs  test.rs  valorant.rs
src/guards/: auth.rs  auth0_management.rs  db_conn.rs  s3.rs  stripe.rs
src/guards/auth/: jwt.rs  ott.rs
src/intercom/: contacts.rs
src/models/: account.rs  audio.rs  avatar.rs  coach.rs  coach_invitations.rs  comment.rs  digest.rs  following.rs  game.rs  one_time_token.rs  player.rs  recording.rs  review.rs  review_intent.rs  session.rs  skill_level.rs  user.rs  user_game.rs
src/queue_handlers/: rekognition.rs  s3_bucket.rs  scheduled_tasks.rs  stripe.rs  uploads.rs
src/queue_handlers/s3_bucket/: handlers.rs
src/queue_handlers/stripe/: connect.rs  direct.rs
src/queue_handlers/uploads/: handlers.rs
src/routes/: audios.rs  avatars.rs  claims.rs  coach.rs  coaches.rs  comments.rs  explore.rs  game.rs  games.rs  index.rs  me.rs  passwords.rs  player.rs  recordings.rs  reviews.rs  session.rs  sessions.rs  users.rs
src/routes/claims/: coaches.rs  players.rs
src/routes/coach/: account.rs  account_links.rs  audios.rs  avatars.rs  comments.rs  games.rs  recordings.rs  reviews.rs  stripe_account_links.rs  stripe_country_specs.rs  stripe_login_links.rs
src/routes/player/: account.rs  checkouts.rs  coaches.rs  comments.rs  games.rs  recordings.rs  review_intents.rs  reviews.rs  stripe_billing_details.rs  stripe_billing_portal_links.rs  stripe_billing_portal_sessions.rs  stripe_checkout_sessions.rs  stripe_payment_intents.rs  stripe_payment_methods.rs  stripe_tax_calculations.rs
src/routes/public/: games.rs
src/routes/user/: games.rs  me.rs  users.rs
src/stripe/: ids.rs  order.rs  order_line_item.rs  tax.rs  tax_calculation.rs  webhook_events.rs
src/stripe/tax/: calculations.rs  transactions.rs
src/views/: audio.rs  avatar.rs  coach.rs  comment.rs  game.rs  player.rs  recording.rs  review.rs  review_intent.rs  user.rs
(+7 files in other folders)
