[package]
authors = ["Ranklab Ltd"]
edition = "2018"
name = "ranklab-api"
version = "0.1.0"

[dependencies]
ammonia = "3.3.0"
anyhow = "1.0.71"
async-mutex = "1.4.0"
async-stripe = { git = "https://github.com/ranklab-gaming/async-stripe", features = [
  "runtime-tokio-hyper",
  "checkout",
  "connect",
  "webhook-events"
], default_features = false }
bcrypt = "0.14.0"
derive_builder = "0.12.0"
diesel-derive-enum = { version = "2.1.0", features = [
  "postgres",
] }
diesel = { version = "=2.1.0", features = ["uuid", "chrono", "postgres", "serde_json"] }
diesel_migrations = "=2.1.0"
dotenv = "0.15.0"
hex = "0.4.3"
hmac = "0.12.1"
html2text = "0.6.0"
hyper = "0.14.27"
hyper-tls = "0.5.0"
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
okapi = { git = "https://github.com/ranklab-gaming/okapi" }
rand = "0.8.5"
regex = "1.8.4"
reqwest = { version = "0.11.18", features = ["json", "multipart"] }
rocket = { git = "https://github.com/ranklab-gaming/Rocket", features = [
  "json",
  "serde_json",
  "uuid",
] }
rocket_okapi = { git = "https://github.com/ranklab-gaming/okapi", features = [
  "uuid",
] }
rocket_sync_db_pools = { git = "https://github.com/ranklab-gaming/Rocket", features = [
  "diesel_postgres_pool",
] }
rocket_sync_db_pools_codegen = { git = "https://github.com/ranklab-gaming/Rocket" }
rusoto_core = "0.48.0"
rusoto_credential = "0.48.0"
rusoto_s3 = "0.48.0"
rusoto_sesv2 = "0.48.0"
rusoto_signature = "0.48.0"
rusoto_sqs = "0.48.0"
rusoto_stepfunctions = "0.48.0"
schemars = { version = "0.8.12", features = ["chrono"] }
sentry = "0.31.5"
serde = "1.0.164"
serde_json = "1.0.99"
serde_plain = "1.0.1"
serde_path_to_error = "0.1.11"
sha2 = "0.10.7"
smol_str = "0.2.0"
thiserror = "1.0.40"
uuid = { version = "1.3.4", features = ["v4", "serde"] }
validator = { version = "0.16.1", features = ["derive"] }
chrono = "0.4.26"
rust_iso3166 = "0.1.10"
slugify = "0.1.0"
once_cell = "1.18.0"
