[package]
authors = ["Ranklab Ltd"]
edition = "2018"
name = "ranklab-api"
version = "0.1.0"

[dependencies]
ammonia = "3.3.0"
anyhow = "1.0.76"
async-mutex = "1.4.0"
bcrypt = "0.15.0"
derive_builder = "0.12.0"
diesel-derive-enum = { version = "2.1.0", features = [
  "postgres",
] }
diesel = { version = "=2.1.4", features = ["uuid", "chrono", "postgres", "serde_json"] }
diesel_migrations = "=2.1.0"
dotenv = "0.15.0"
hex = "0.4.3"
hmac = "0.12.1"
html2text = "0.8.0"
hyper = "1.1.0"
hyper-tls = "0.5.0"
itertools = "0.12.0"
jsonwebtoken = "9.2.0"
lazy_static = "1.4.0"
okapi = { git = "https://github.com/ranklab-gaming/okapi" }
rand = "0.8.5"
regex = "1.10.2"
reqwest = { version = "0.11.23", features = ["json", "multipart"] }
rocket = { git = "https://github.com/ranklab-gaming/Rocket", features = [
  "json",
  "serde_json",
  "uuid",
] }
rocket_okapi = { git = "https://github.com/ranklab-gaming/okapi", features = [
  "uuid",
] }
rocket_sync_db_pools = { git = "https://github.com/ranklab-gaming/Rocket", features = [
  "diesel_postgres_pool",
] }
rocket_sync_db_pools_codegen = { git = "https://github.com/ranklab-gaming/Rocket" }
rusoto_core = "0.48.0"
rusoto_credential = "0.48.0"
rusoto_s3 = "0.48.0"
rusoto_sesv2 = "0.48.0"
rusoto_signature = "0.48.0"
rusoto_sqs = "0.48.0"
schemars = { version = "0.8.16", features = ["chrono"] }
sentry = "0.32.1"
serde = "1.0.193"
serde_json = "1.0.108"
serde_plain = "1.0.2"
serde_path_to_error = "0.1.14"
sha2 = "0.10.8"
smol_str = "0.2.0"
thiserror = "1.0.51"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
validator = { version = "0.16.1", features = ["derive"] }
chrono = "0.4.31"
rust_iso3166 = "0.1.11"
slugify = "0.1.0"
once_cell = "1.19.0"
clokwerk = "0.4.0"
pluralizer = "0.4.0"
rusoto_lambda = "0.48.0"
rusoto_rekognition = "0.48.0"
rusoto_mediaconvert = "0.48.0"
